Fixed minimum heights be removing 1000px min-height from body class in globals.css and adjusting vh in layout and Coding Layout. Now there will be no overflow unless the actual content requires it.

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,6 @@ html {
 
 body {
     @apply text-darkTextPrimary bg-darkBackgroundPrimary;
-    min-height: 1000px;
 }
 
 a {
